<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOnPrimary"
    tools:context=".StartloginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/diamond_violet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"/>


    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_to_your_account"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="MissingConstraints">


        <EditText
            android:id="@+id/email"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/round_edittext"
            android:drawableStart="@drawable/ic_baseline_mail"
            android:drawablePadding="14dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="12dp"
            app:met_floatingLabel="normal"
            tools:ignore="TextContrastCheck" />


        <EditText
            android:id="@+id/password"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:layout_marginBottom="200dp"
            android:autofillHints=""
            android:background="@drawable/round_edittext"
            android:drawableStart="@drawable/ic_baseline_key"
            android:drawablePadding="14dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="12dp"
            app:met_floatingLabel="normal"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_margin="50dp"
            android:background="@drawable/round_btn"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/if_you_do_not_have_an_account"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/clickable_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/click_here"
            android:textColor="#039BE5"
            android:textSize="20sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>